ScheduleReportPackage/src/objects/Scheduled_Report_Export_Job__c.object
<CustomObject>
    <description>History of Scheduled Report Export Jobs</description>
    <fields>
        <fullName>Action__c</fullName>
        <formula>IF( Results_Saved__c , IMAGE(&apos;http://cdn4.iconfinder.com/data/icons/fugue/icon/paper-clip.png&apos;, &apos;Results Attached&apos;), &apos;&apos;) + &apos; &apos; +
IF( Results_Sent__c , IMAGE(&apos;/img/func_icons/util/mailFrontEnv16.gif&apos;, &apos;Results Emailed&apos;) , &apos;&apos;)</formula>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Recipients__c</fullName>
        <inlineHelpText>Email addresses that the report was sent to</inlineHelpText>
        <label>Email Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failure_Reason__c</fullName>
        <label>Failure Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_String_Params__c</fullName>
        <description>Parameters to put on the query string when requesting the report to export.</description>
        <label>Query String Params</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Saved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for image formula to show the results have been saved</description>
        <label>Results Saved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Results_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for image formula to show the results have been sent by email</description>
        <label>Results Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Report_Export__c</fullName>
        <label>Scheduled Report Export</label>
        <referenceTo>Scheduled_Report_Export__c</referenceTo>
        <relationshipLabel>Export Jobs</relationshipLabel>
        <relationshipName>Export_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Describes how the Export was executed</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Scheduled Report Export Job</label>
    <nameField>
        <displayFormat>SRE-{000000}</displayFormat>
        <label>Export#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Report Export Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>